--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -1,13 +1,18 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+name: Check All Tests
+run-name: ${{ github.actor }} is checking they didn't break the code
+on: [pull_request]
+
 jobs:
-  Explore-GitHub-Actions:
+  Run_Tests:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        normal-tests: [1, 2, 3, 4, 5, 6, 7, 8, 9]
+        error-tests: [1, 2, 3, 4, 5, 6, 7]
+
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - run: echo ${{ github.actor }} has created a PR against main, watch out!
       - name: Check out repository code
         uses: actions/checkout@v3
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
@@ -15,6 +20,19 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - run: make tests
+      - run: mkdir -p localtests
+      - run: rm -rf ./localtests/*
+      - run: cp -r tests/*.fun localtests
+      - run: echo "📁 The tests have been copied to the runner."
+      - run: echo "Running normal tests..."
+      - run: echo "Test ${{ matrix.normal-tests }}..."
+      - run: runHaskell Compiler.hs -o localtests/ejemplo${{ matrix.normal-tests }}
+      - run: echo "Normal:"
+      - run: diff localtests/ejemplo${{ matrix.normal-tests }}.c tests/ejemplo${{ matrix.normal-tests }}.c
+      - run: echo "Optimized:"
+      - run: diff localtests/ejemplo${{ matrix.normal-tests }}_opt.c tests/ejemplo${{ matrix.normal-tests }}_opt.c
+      - run: echo "Running error tests..."
+      - run: echo "Test ${{ matrix.error-tests }}..."
+      - run: runHaskell Compiler.hs -o localtests/error${{ matrix.error-tests }}.err localtests/ejemplo$${i}err.err
+      - run: diff localtests/error${{ matrix.error-tests }}.err.err tests/error${{ matrix.error-tests }}.err.err
       - run: echo "🍏 This job's status is ${{ job.status }}."
-
