--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -3,13 +3,12 @@ run-name: ${{ github.actor }} is checking they didn't break the code
 on: [pull_request]
 
 jobs:
-  Run_Tests:
+  Normal_Tests:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         normal-tests: [1, 2, 3, 4, 5, 6, 7, 8, 9]
-        error-tests: [1, 2, 3, 4, 5, 6, 7]
 
     steps:
       - run: echo ${{ github.actor }} has created a PR against main, watch out!
@@ -31,8 +30,31 @@ jobs:
       - run: diff localtests/ejemplo${{ matrix.normal-tests }}.c tests/ejemplo${{ matrix.normal-tests }}.c
       - run: echo "Optimized:"
       - run: diff localtests/ejemplo${{ matrix.normal-tests }}_opt.c tests/ejemplo${{ matrix.normal-tests }}_opt.c
+      - run: echo "🍏 This job's status is ${{ job.status }}."
+
+  Error_Tests:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        error-tests: [1, 2, 3, 4, 5, 6, 7]
+
+    steps:
+      - run: echo ${{ github.actor }} has created a PR against main, watch out!
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - run: mkdir -p localtests
+      - run: rm -rf ./localtests/*
+      - run: cp -r tests/*.fun localtests
+      - run: echo "📁 The tests have been copied to the runner."
       - run: echo "Running error tests..."
       - run: echo "Test ${{ matrix.error-tests }}..."
-      - run: runHaskell Compiler.hs -o localtests/error${{ matrix.error-tests }}.err localtests/ejemplo$${i}err.err
-      - run: diff localtests/error${{ matrix.error-tests }}.err.err tests/error${{ matrix.error-tests }}.err.err
+      - run: runHaskell Compiler.hs -o localtests/ejemplo${{ matrix.error-tests }}
+      - run: echo "Error:"
+      - run: diff localtests/ejemplo${{ matrix.error-tests }}.err.err tests/ejemplo${{ matrix.error-tests }}.err.err
       - run: echo "🍏 This job's status is ${{ job.status }}."
