New run haskell version

--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -23,8 +23,7 @@ jobs:
       - run: rm -rf ./localtests/*
       - run: cp -r tests/*.fun localtests
       - run: echo "📁 The tests have been copied to the runner."
-      - uses: actions/checkout@v2
-      - uses: actions/setup-haskell@v1.1
+      - uses: haskell/actions/setup@v2
       - run: echo "Running normal tests..."
       - run: echo "Test ${{ matrix.normal-tests }}..."
       - run: runHaskell Compiler.hs -o localtests/ejemplo${{ matrix.normal-tests }}
@@ -54,8 +53,7 @@ jobs:
       - run: rm -rf ./localtests/*
       - run: cp -r tests/*.fun localtests
       - run: echo "📁 The tests have been copied to the runner."
-      - uses: actions/checkout@v2
-      - uses: actions/setup-haskell@v1.1
+      - uses: haskell/actions/setup@v2
       - run: echo "Running error tests..."
       - run: echo "Test ${{ matrix.error-tests }}..."
       - run: runHaskell Compiler.hs -o localtests/ejemplo${{ matrix.error-tests }}
