--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -24,6 +24,8 @@ jobs:
       - run: cp -r tests/*.fun localtests
       - run: echo "📁 The tests have been copied to the runner."
       - uses: haskell/actions/setup@v2
+        with: 
+          ghc-version: '9.2.5'
       - run: echo "Running normal tests..."
       - run: echo "Test ${{ matrix.normal-tests }}..."
       - run: runhaskell Compiler.hs -o localtests/ejemplo${{ matrix.normal-tests }}
