--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -24,8 +24,8 @@ jobs:
       - run: cp -r tests/*.fun localtests
       - run: echo "📁 The tests have been copied to the runner."
       - uses: haskell/actions/setup@v2
-        with: 
-          ghc-version: '9.2.5'
+        with:
+          ghc-version: "9.2.5"
       - run: echo "Running normal tests..."
       - run: echo "Test ${{ matrix.normal-tests }}..."
       - run: runhaskell Compiler.hs -o localtests/ejemplo${{ matrix.normal-tests }}
@@ -56,9 +56,11 @@ jobs:
       - run: cp -r tests/*.fun localtests
       - run: echo "📁 The tests have been copied to the runner."
       - uses: haskell/actions/setup@v2
+        with:
+          ghc-version: "9.2.5"
       - run: echo "Running error tests..."
       - run: echo "Test ${{ matrix.error-tests }}..."
       - run: runhaskell Compiler.hs -o localtests/ejemplo${{ matrix.error-tests }}
       - run: echo "Error:"
-      - run: diff localtests/ejemplo${{ matrix.error-tests }}.err.err tests/ejemplo${{ matrix.error-tests }}.err.err
+      - run: diff localtests/ejemplo${{ matrix.error-tests }}err.err tests/ejemplo${{ matrix.error-tests }}err.err
       - run: echo "🍏 This job's status is ${{ job.status }}."
