--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -23,7 +23,10 @@ jobs:
       - run: rm -rf ./localtests/*
       - run: cp -r tests/*.fun localtests
       - run: echo "📁 The tests have been copied to the runner."
+      - run: ls localtests
       - uses: haskell/actions/setup@v2
+        with:
+          ghc-version: "9.2.5"
       - run: echo "Running normal tests..."
       - run: echo "Test ${{ matrix.normal-tests }}..."
       - run: runhaskell Compiler.hs -o localtests/ejemplo${{ matrix.normal-tests }}
@@ -53,10 +56,13 @@ jobs:
       - run: rm -rf ./localtests/*
       - run: cp -r tests/*.fun localtests
       - run: echo "📁 The tests have been copied to the runner."
+      - run: ls localtests
       - uses: haskell/actions/setup@v2
+        with:
+          ghc-version: "9.2.5"
       - run: echo "Running error tests..."
       - run: echo "Test ${{ matrix.error-tests }}..."
       - run: runhaskell Compiler.hs -o localtests/ejemplo${{ matrix.error-tests }}
       - run: echo "Error:"
-      - run: diff localtests/ejemplo${{ matrix.error-tests }}.err.err tests/ejemplo${{ matrix.error-tests }}.err.err
+      - run: diff localtests/ejemplo${{ matrix.error-tests }}err.err tests/ejemplo${{ matrix.error-tests }}err.err
       - run: echo "🍏 This job's status is ${{ job.status }}."
